2009-11-15 Harri Pitkänen <hatapitk@iki.fi>
	* Accept "A-rapussa" in grammar checker.
	* Read speller configuration from dictionary description.
	* Add SpellerFactory.
	* Add my name and GPL license text to Malaga source files
	  as they have been significantly changed from originals.
	* Implement partially working HfstSpeller.

2009-11-14 Harri Pitkänen <hatapitk@iki.fi>
	* Add interface Speller and implement it in
	  AnalyzerToSpellerAdapter.

2009-11-09 Harri Pitkänen <hatapitk@iki.fi>

	* Most of the global variables have now been eliminated
	  from Malaga implementation.

2009-11-01 Harri Pitkänen <hatapitk@iki.fi>

	* HFST analyzer backend returns correct number of analyses.
	  Analysis attributes contain dummy values only.

2009-10-31 Harri Pitkänen <hatapitk@iki.fi>

	* Add configure option --enable-hfst.
	* Increase version numbers for 2.3.
	* Read morphology backend name from voikko-fi_FI.pro.
	  Default is "malaga" so dictionary format version does not
	  need to be changed to be able to use experimental backends.
	* Added a dummy analyzer for HFST backend.

2009-10-30 Harri Pitkänen <hatapitk@iki.fi>

	* Tell iconv the correct length of the output buffer so that string
	  conversion is not aborted too early.

2009-10-24 Harri Pitkänen <hatapitk@iki.fi>

	* Remove unused code.
	* Remove global variables.
	* White space characters are no longer allowed at the start
	  or end of the word.
	* Change error handling in malaga implementation to use C++ exceptions.

2009-10-06 Harri Pitkänen <hatapitk@iki.fi>

	* Additions to autocorrect data.
	* Increase version numbers for 2.2.1.

2009-10-04 Lauri Nurmi <lanurmi@iki.fi>

	* Fix autogen.sh to work with non-GNU find and xargs.

2009-10-04 Harri Pitkänen <hatapitk@iki.fi>

	* Do not dereference iterator to map.end(), this does not work with MSVC.

2009-10-03 Harri Pitkänen <hatapitk@iki.fi>

	* Fix warnings and errors found by compiling the code with MSVC.