@@ -1,3 +1,6 @@
+2009-11-21 Harri Pitkänen <hatapitk@iki.fi>
+	* Add documentation for morphological analyzer.
+
 2009-11-15 Harri Pitkänen <hatapitk@iki.fi>
 	* Accept "A-rapussa" in grammar checker.
 	* Read speller configuration from dictionary description.
